--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     background-color: var(--darkblue);
     display: flex;
     align-items: center;
+    overflow: hidden;
     justify-content: center;
 }
 
@@ -37,18 +38,32 @@ h1 {
     font-family: cotta;
 }
 
+a {
+    text-decoration: none;
+}
+
 /* Utilities */
+
+.flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    width: 100%;
+    max-width: 1600px;
+}
 
 .button {
     cursor: pointer;
     padding: .6rem .8rem;
     border-radius: 1rem 0 1rem 0;
     box-shadow: inset 0 0 0 2px var(--white);
-    display: inline-block;
-    margin: 1.5rem 0;
-    text-decoration: none;
     overflow: hidden;
     position: relative;
+    width: fit-content;
 }
 
 .button div {
@@ -88,20 +103,20 @@ h1 {
     }
 }
 
-/* Footer */
+/* nav */
 
-footer {
+nav {
     background-color: var(--orange);
     left: 0;
     top: 0;
     bottom: 0;
-    right: 4rem;
     width: 4rem;
     position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 2;
 }
 
 .logo {
@@ -113,15 +128,62 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: inset -3px -5px 0 0 var(--darkblue);
-    border-radius: 1.2rem;
 }
 
-.logo h1 {
-    font-size: 2.5rem;
+.logo img {
+    animation: opacity 3s ease-in-out infinite;
+    width: 4.5rem;
+    opacity: 1;
+    position: absolute;
 }
 
-footer ul {
+@keyframes opacity {
+    0% {
+        opacity: 0;
+        bottom: -5rem;
+    }
+
+    10% {
+        bottom: .5rem;
+        opacity: 1;
+    }
+
+    20% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    68% {
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 0;
+    }
+
+    72% {
+        opacity: 1;
+    }
+
+    74% {
+        opacity: 0;
+    }
+
+    80% {
+        opacity: 1;
+        bottom: .5rem;
+    }
+
+    100% {
+        opacity: 0;
+        bottom: 5rem;
+    }
+}
+
+nav ul {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -129,18 +191,18 @@ footer ul {
     gap: 1rem;
 }
 
-footer ul li a img {
+nav ul li a img {
     cursor: pointer;
     width: 2.5rem;
     padding: .4rem;
     transition: .2s;
 }
 
-footer ul li {
+nav ul li {
     position: relative;
 }
 
-footer ul li p {
+nav ul li p {
     position: absolute;
     top: .8rem;
     left: 3.6rem;
@@ -150,33 +212,34 @@ footer ul li p {
     width: max-content;
     padding: .2rem .4rem;
     border-radius: .25rem;
-    background-color: var(--orange);
+    background-color: var(--white);
     display: flex;
+    color: var(--orange);
     justify-content: center;
 }
 
-footer ul li p::after {
+nav ul li p::after {
     content: '';
     z-index: -1;
     position: absolute;
     top: .18rem;
     left: -.45rem;
-    background-color: var(--orange);
+    background-color: var(--white);
     width: .27rem;
     height: .27rem;
     border: .5rem solid;
     border-radius: .2rem;
-    border-color: transparent transparent var(--orange) var(--orange);
+    border-color: transparent transparent var(--white) var(--white);
     transform: rotate(45deg);
 }
 
-footer ul li:hover p {
+nav ul li:hover p {
     left: 4.2rem;
     visibility: visible;
     opacity: 1;
 }
 
-footer ul li:hover img {
+nav ul li:hover img {
     transform: scale(1.3);
     box-shadow: none;
 }
@@ -199,8 +262,6 @@ footer ul li:hover img {
 /* Main */
 
 .main {
-    width: 100%;
-    max-width: 1600px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -213,41 +274,87 @@ footer ul li:hover img {
 }
 
 .infomain h1 {
-    position: relative;
-    height: 4.5rem;
-    margin: 1rem 0;
     width: 20rem;
+    opacity: 0;
+    left: -29rem;
+    animation: beginning 3s 2s ease-in-out forwards;
+}
+
+.infomain p:nth-child(4) {
+    margin-bottom: 1.5rem;
+}
+
+@keyframes beginning {
+
+    0% {
+        height: 0;
+    }
+
+    15% {
+        height: 7.5rem;
+        opacity: 1;
+    }
+
+    60% {
+        opacity: 1;
+    }
+
+    63% {
+        opacity: 0;
+    }
+
+    66% {
+        opacity: 1;
+    }
+
+    69% {
+        opacity: 0;
+    }
+
+    72% {
+        opacity: 1;
+    }
+
+    70% {
+        height: 7.5rem;
+    }
+
+    100% {
+        height: 7.5rem;
+        left: 0;
+        opacity: 1;
+    }
+    
 }
 
 .infomain h1 span {
     position: absolute;
-    right: 0;
-    bottom: -1.3rem;
-    animation: .3s forwards ease-in-out;
+    right: 2.5rem;
+    bottom: .3rem;
 }
 
 .infomain h1:hover span:first-child {
-    animation: jumping .3s;
+    animation: jumping .5s;
 }
 
 .infomain h1:hover span:nth-child(2) {
-    animation: jumping .3s .1s;
+    animation: jumping .5s .1s;
 }
 
 .infomain h1:hover span:nth-child(3) {
-    animation: jumping .3s .2s;
+    animation: jumping .5s .2s;
 }
 
 .infomain h1:hover span:nth-child(4) {
-    animation: jumping .3s .3s;
+    animation: jumping .5s .3s;
 }
 
 .infomain h1:hover span:nth-child(5) {
-    animation: jumping .3s .4s;
+    animation: jumping .5s .4s;
 }
 
 .infomain h1:hover span:nth-child(6) {
-    animation: jumping .3s .6s;
+    animation: jumping .5s .6s;
 }
 
 .infomain h1 span:first-child {
@@ -276,15 +383,15 @@ footer ul li:hover img {
 
 @keyframes jumping {
     0% {
-        bottom: -1.3rem;
+        bottom: .3rem;
     }
 
     50% {
-        bottom: 0;
+        bottom: 1.5rem;
     }
 
     100% {
-        bottom: -1.3rem;
+        bottom: .3rem;
     }
 }
 
@@ -308,7 +415,6 @@ footer ul li:hover img {
 .stars {
     position: relative;
     height: 100%;
-    background-color: red;
 }
 
 .star {
@@ -516,6 +622,258 @@ footer ul li:hover img {
 
 /* About me */
 
-h1 {
+.glass {
+    position: relative;
+    width: 80rem;
+    height: 35rem;
+    padding: 2rem 0;
+}
 
+.glass h1 {
+    position: absolute;
+    top: 2rem;
+}
+
+.glass::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.044), rgba(255, 255, 255, 0.236));
+    border-radius: .5rem;
+    backdrop-filter: blur(1rem);
+    box-shadow: 0 0px 32px 0 rgba(0, 0, 0, 0.336);
+    z-index: -1;
+}
+
+.aboutContainer > div {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-left: 5rem;
+    margin-top: 5rem;
+}
+
+#blop {
+    position: absolute;
+    z-index: -5;
+}
+
+.aboutContainer img:first-child {
+    bottom: 9rem;
+    width: 80rem;
+    animation: dancing 80s ease-in-out infinite;
+}
+
+@keyframes dancing {
+
+    0% {
+        transform: rotate(0);
+    }
+
+    50% {
+        transform: rotate(365deg) scale(1.1);
+    }
+
+    100% {
+        transform: rotate(0);
+    }
+}
+
+.infoabout {
+    width: 20rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    align-items: center;
+}
+
+#spaceship {
+    width: 30rem;
+    margin-left: 3rem;
+}
+
+/* My Projects */
+
+.projectsContainer {
+    padding: .2rem;
+    position: relative;
+}
+
+.projects {
+    width: 100%;
+    height: 70%;
+    overflow: auto;
+    gap: 1rem;
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 10rem);
+}
+
+.projectsContainer > img {
+    position: absolute;
+    top: -12.7rem;
+    z-index: -2;
+    filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(349deg) brightness(101%) contrast(105%);
+}
+
+.projects::-webkit-scrollbar-track {
+    margin-right: .6rem;
+}
+
+.projects::-webkit-scrollbar
+{
+	width: 8px;
+}
+
+.projects::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #2f2e41;
+}
+
+.project {
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    border-radius: .2rem;
+}
+
+.project p {
+    position: absolute;
+    bottom: -1.5rem;
+    transition: .5s;
+    right: 50%;
+    width: 100%;
+    transform: translateX(50%);
+    text-transform: uppercase;
+    z-index: 1;
+    cursor: pointer;
+    width: max-content;
+    padding: .2rem .5rem;
+    border-radius: .2rem;
+}
+
+.project:hover p {
+    bottom: 42%;
+    background-color: var(--white);
+    color: var(--orange);
+}
+
+.project::after {
+    background-color: var(--orange);
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 100%;
+    cursor: pointer;
+    opacity: .7;
+    transition: .2s;
+}
+
+.project:hover::after {
+    top: 0;
+}
+
+.project:hover img {
+    transform: scale(1.2) rotate(2deg);
+    filter: blur(.05rem);
+    opacity: .6;
+}
+
+.project img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+    transition: .5s;
+}
+
+/* Responsivity */
+
+@media (max-width: 1285px) {
+    .stars,
+    .rightmain,
+    .projectsContainer > img,
+    #spaceship,
+    .blop,
+    .projects .project:last-child {
+        display: none;
+    }
+
+    .main {
+        justify-content: center;
+    }
+
+    nav {
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 4rem;
+        overflow: hidden;
+    }
+
+    nav ul {
+        flex-direction: row;
+    }
+
+    .logo {
+        left: .5rem;
+    }
+
+    .infomain {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contactContainer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .infomain h1 span {
+        right: 0;
+    }
+
+    .aboutContainer > div {
+        padding: 0;
+        margin-top: 2rem;
+    }
+
+    .glass h1 {
+        position: sticky;
+        margin: 0;
+    }
+
+    .glass {
+        border-radius: 0;
+        height: 100%;
+        padding-top: 4rem;
+    }
+
+    .glass::before {
+        border-radius: 0;
+    }
+
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+        align-content: center;
+    }
+
+    .logo img {
+        width: 4rem;
+    }
+
+    #blop {
+        display: none;
+    }
 }
